[package]
name = "rgeometry-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
quick-xml = "0.22.0"
anes = "0.1"
serde = "1.0"
anyhow = "1.0.44"
osmpbf = "0.2.7"
rayon = "1.5.1"
env_logger = "0.9.0"
memmap = "0.7.0"
byte-slice-cast = "1.1.0"
chrono = "*"
eframe = "0.16.0"
humantime = "*"
rhai = "1.4.1"
