[package]
name = "rgeometry-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
quick-xml = "0.22.0"
anes = "0.1"
serde = "1.0"
anyhow = "1.0.44"
osmpbf = { version = "0.2.7", optional = true }
rayon = { version = "1.5.1", optional = true }
env_logger = "0.9.0"
memmap = { version = "0.7.0", optional = true }
byte-slice-cast = "1.1.0"
chrono = "*"
eframe = "0.16.0"
humantime = "*"
rhai = "1.4.1"
clap = { version = "3.1.2", features = ["derive"] }

[features]
default = ["osmpbf", "rayon", "memmap"]
