[package]
name    = "rgeometry-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgeometry       = "0.8.1"
rand            = "0.8.5"
ordered-float   = "3.0.0"
pbr             = "1.0.4"
log             = "0.4.17"
quick-xml       = "0.23.0"
anes            = "0.1.6"
serde           = "1.0"
anyhow          = "1.0.44"
osmpbf          = { version = "0.2.7", optional = true }
rayon           = { version = "1.5.1", optional = true }
env_logger      = "0.9.0"
memmap          = { version = "0.7.0", optional = true }
byte-slice-cast = "1.1.0"
chrono          = "0.4.19"
eframe          = { version = "0.18.0", optional = true }
humantime       = "2.1.0"
rhai            = "1.4.1"
clap            = { version = "3.1.2", features = ["derive"] }

[features]
ui      = ["eframe"]
pbf     = ["osmpbf", "rayon", "memmap"]
default = ["pbf", "ui"]
